# ocaml-crud-sqlite3

./: crud_sqlite3.opam  dune-project
lib/: dune
test/: dune
